--- a/docs/tutorial.ipynb
+++ b/docs/tutorial.ipynb
@@ -6,10 +6,16 @@
    "source": [
     "# Python Tutorial\n",
     "\n",
-    "```{note}\n",
     "\n",
+    "```{note}\n",
     "This tutorial is currently in preparation. Please check back later.\n",
-    "```"
+    "```\n",
+    "\n",
+    "This tutorial demonstrates how to use the `monochrome` Python library to visualize videos and other data in the Monochrome viewer.\n",
+    "\n",
+    "## Basic Usage\n",
+    "\n",
+    "First, import the necessary libraries:"
    ]
   },
   {
@@ -24,13 +30,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here we use [optimap](https://github.com/cardiacvision/optimap) to download a sample video as a numpy array."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename = om.utils.retrieve_example_data(\"Example_02_VF_Rabbit_Di-4-ANEPPS_Basler_acA720-520um.npy\")\n",
+    "filename = om.download_example_data(\"VF_Rabbit_1.npy\")\n",
     "video = om.load_video(filename)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Display the video in Monochrome using {func}`mc.show`:"
    ]
   },
   {
@@ -46,7 +66,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Several videos can be shown at the same time, they will be played in sync if they have the same length:"
+    "You can display multiple videos simultaneously. They will play in sync if they have the same length:"
    ]
   },
   {
@@ -68,7 +88,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The functions {func}`show` or {func}`show_file` can be used to load a video from a file in Monochrome:"
+    "You can load videos directly from a file path using {func}`mc.show` or {func}`mc.show_file`:"
    ]
   },
   {
@@ -77,8 +97,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(filename)\n",
-    "mc.show(filename)"
+    "mc.show(filename)  # Equivalent to mc.show_file(filename)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Advanced Usage\n",
+    "\n",
+    "### Overlays\n",
+    "\n",
+    "You can add a video as an overlay to another video using {func}`mc.show_layer`. This is useful for comparing different videos or visualizing different aspects of the same video. The overlay will be blended with the parent video using the specified opacity function."
    ]
   },
   {
@@ -87,8 +117,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "om.motion_compensate"
+    "# Create a synthetic overlay\n",
+    "overlay = video.copy()\n",
+    "overlay[:, 32:96, 32:96] = np.nan  # Create a transparent region\n",
+    "\n",
+    "# Display the overlay\n",
+    "mc.show_layer(overlay, parent=\"Example Recording\", name=\"Overlay\", cmap=\"hsv\", opacity=0.5)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Optical Flow\n",
+    "\n",
+    "You can visualize optical flow using {func}`mc.show_flow`. This function takes a 4D numpy array of shape `(T, H, W, 2)` where `T` is the number of frames, `H` and `W` are the height and width of the video, and the last dimension represents the x and y components of the flow vectors.\n",
+    "\n",
+    "First, let's create some synthetic optical flow data:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
